--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1>Welcome to our Digital LaunchPad</h1>
           <h2>MoonBase is a hub to raise awareness and funding through donations for projects we believe in. </h2>
-          <div><a href="#clients" class="btn-get-started scrollto">Get Started</a></div>
+          <div><a href="#about" class="btn-get-started scrollto">Get Started</a></div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
           <img src="assets/img/hero-img.png" class="img-fluid" alt="">
@@ -135,12 +135,22 @@
         <div class="row">
 
           <div class="col-lg-4 col-md-6">
-            <div class="icon-box">
+          <a href="https://leonean.org" target="_blank">  <div class="icon-box">
               <div class="icon"><i class="las la-globe-africa" style="color: #d6ff22;"></i></div>
-              <h4 class="title"><a href="">Smart Farm Sierra Leone</a></h4>
-              <p class="description">Establishing a farm in the capital city of Freetown, Sierra Leone.</p>
-            </div>
+              <h4 class="title">Smart Farm Sierra Leone</h4>
+              <p class="description">Establishing a farm in the capital city of Freetown, Sierra Leone in an effort to create jobs and provide food.</p>
+            </div></a>
+</div>
 
+
+                      <div class="col-lg-4 col-md-6">
+                      <a href="https://bcfafrica.org" target="_blank">  <div class="icon-box">
+                          <div class="icon"><i class="las la-globe-africa" style="color: #d6ff22;"></i></div>
+                          <h4 class="title">Blockchain Foundation Africa</h4>
+                          <p class="description">BCFAfrica facilitates education programs to facilitate tech integration and encourage entrepreneurship.</p>
+                        </div></a>
+
+</div>
 <!--
 
           <div class="col-lg-4 col-md-6">
@@ -200,7 +210,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6">
-            <h4>Join Our Newsletter</h4>
+            <h4>Newsletter</h4>
             <p>We will keep you up to date with news and events, and exciting information related to our projects!</p>
             <div id="mc_embed_signup">
             <form action="https://app.us2.list-manage.com/subscribe/post?u=f4d04d8eeed296edd2baedebf&amp;id=d3eb9f02ba" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
