--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                       <a href="https://bcfafrica.org" target="_blank">  <div class="icon-box">
                           <div class="icon"><i class="las la-globe-africa" style="color: #d6ff22;"></i></div>
                           <h4 class="title">Blockchain Foundation Africa</h4>
-                          <p class="description">BCFAfrica facilitates education programs to facilitate tech integration and encourage entrepreneurship.</p>
+                          <p class="description">BCFAfrica facilitates education programs to encourage tech integration and entrepreneurship.</p>
                         </div></a>
 
 </div>
