--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 
         <div class="row">
 
+<!--          
           <div class="col-lg-4 col-md-6">
           <a href="https://leonean.org" target="_blank">  <div class="icon-box">
            <!--   <div class="icon"><i class="las la-globe-africa" style="color: #d6ff22;"></i></div> -->
@@ -141,7 +142,7 @@
               <p class="description">Establishing a farm in the capital city of Freetown, Sierra Leone in an effort to create jobs and provide food.</p>
             </div></a>
 </div>
-
+-->
 
                       <div class="col-lg-4 col-md-6">
                       <a href="https://bcfafrica.org" target="_blank">  <div class="icon-box">
@@ -153,7 +154,7 @@
 </div>
           
                  <div class="col-lg-4 col-md-6">
-                      <a href="https://bcfafrica.org" target="_blank">  <div class="icon-box">
+                      <a href="https://satellite.app" target="_blank">  <div class="icon-box">
                           <div class="icon"><i class="las la-globe-africa" style="color: #d6ff22;"></i></div>
                           <h4 class="title">Satellite.app</h4>
                           <p class="description">Connecting the world with a multi channel infrastructure to support communications worldwide.</p>
